<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Fyndr</string>
    <string name="title_activity_maps">Fyndr</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sure">Sure</string>
    <string name="disconnect">Disconnect</string>
    <string name="nav_compass">Compass</string>
    <string name="nav_map">Map</string>
    <string name="nav_set_up">Set up</string>
    <string name="default_double_button_delay">300</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="location_distance_str">Distance ±%1$d %2$s</string>
    <string name="car_is_nearby">Your Car is Nearby</string>
    <string name="TurnOff">Turn off</string>
    <string name="Continue">Continue</string>
    <string name="alert_time_ten_mins_left">You\'ll be notified when\n you have 10 mins left</string>
    <string name="alert_time_time_up_str">Time is up at </string>
    <string name="park_time_has_ten_mins_left">ten minutes left</string>
    <string name="park_time_time_up">Time is up</string>
    <string name="alert_disconnected_text">Loction saved successfully.Do you want to set a parking meter alert?</string>
    <string name="alert_locaion_fail_text">No GPS signal.we advise you to takea photo.</string>
    <string name="setting_park_time_title">Set the Parking Timer</string>
    <string name="setting_park_time_30m">30 minutes</string>
    <string name="setting_park_time_45m">45 minutes</string>
    <string name="setting_park_time_1h">1 hour</string>
    <string name="setting_park_time_2h">2 hours</string>
    <string name="setting_park_time_3h">3 hours</string>
    <string name="setting_park_time_4h">4 hours</string>
    <string name="setting_park_time_more">more</string>
    <string name="setting_park_time_close">CLOSE</string>
    <string name="setting_park_time_save">SAVE</string>
    <string name="setting_park_time_finish_alert">Are you sure you want to turn it off?</string>
    <string name="setting_park_turn_off_sure">Turn off</string>
    <string name="location_succ_alert">Location success</string>
    <string name="location_fail_alert">Location failed </string>
    <string-array name="setting_park_time_min_arr">
        <item>0 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
        <item>15 mins</item>
        <item>20 mins</item>
        <item>25 mins</item>
        <item>30 mins</item>
        <item>35 mins</item>
        <item>40 mins</item>
        <item>45 mins</item>
        <item>50 mins</item>
        <item>55 mins</item>
    </string-array>
    <string-array name="setting_park_time_hours_arr">
        <item>0 hours</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
    </string-array>
    <string name="photo_mark_menu_title">Marking floor or helpful tips</string>
    <string name="photo_mark_menu_Retake">Retake</string>
    <string name="recommon_menu_open">Open location in Maps</string>
    <string name="recommon_menu_Recommend">Share</string>
    <string name="share_title">AirDrop.Share with people nearby.If you don\'t see them have them turn on AirDropin Control Center on iOS.or go to AirDrop in Finder on A Mac.</string>
    <string name="share_message">Message</string>
    <string name="share_email">Email</string>
    <string name="share_more">More</string>
    <string name="share_copy">Copy</string>
    <string name="bind_bt_status_text">connected successful</string>
    <string name="compass_connected_desc">is Connected</string>
    <string name="unit_meters_upcase">METRES</string>
    <string name="unit_feet_upcase">FEET</string>
    <string name="compass_photo_tips_desc">Unable to find your location\nTake a photo of your surroundings \nto help find your parked car later on.</string>
    <string name="compass_photo_take_photo_text">Take a photo</string>
    <string name="compass_photo_tips">First fool</string>
    <string name="compass_loaction_fail">Unable to Find Location</string>
    <string name="compass_last_park_time">Last Parking Time</string>
    <string name="compass_park_time_less_minute">Less than a minute ago</string>
    <string name="compass_action_desc">Press home button to close the app\nleaving it working in the background</string>
    <string name="fyndr_is_connect"> Fyndr is Connecting\n\nPress the home button\nto close the Fyndr app,\nleaving it run in the background.</string>
    <string name="compass_within_text">Within %1$d %2$s</string>
    <string name="compass_park_time_minute_ago">%1$d mins ago</string>
    <string name="compass_park_time_hours_ago">%1$d hours %2$d mins ago</string>
    <string name="found_devices_again">Press to Connect</string>
    <string name="found_devices_scaning">Connecting..</string>
    <string name="map_ble_connected">Fyndr is Connected</string>
    <string name="map_ble_disconnected">Fyndr is disconnected</string>
    <string name="open_bt_turn_on">Turn On Bluetooth</string>
    <string name="open_bt_setting">OK, I got it</string>
    <string name="open_bt_yellow"><Data><![CDATA[Please Turn <font color="#f7db3c">ON</font> Bluetooth]]></Data></string>
    <string name="turn_on_ble_title">Please Turn On Bluetooth</string>
    <string name="turn_on_bel_desc">Bluetooth is required to connect \n Fyndr to your smartphone.</string>
    <string name="turn_on_help">Help?</string>
    <string name="ble_close_alert">Bluetooth is off. Enable Bluetooth so the APP can save your parking location and log your miles.</string>
    <string name="setting_global_setting">Global setting</string>
    <string name="setting_referral">Share</string>
    <string name="setting_support">Support</string>
    <string name="setting_ifu">Instructions</string>
    <string name="setting_common_problem">Troubleshooting</string>
    <string name="setting_common_problems">Troubleshooting</string>
    <string name="setting_contact_us">Contact Us</string>
    <string name="setting_remove">DISCONNECT</string>
    <string name="setting_sound_remind">Sound Alerts</string>
    <string name="setting_information_notification">Information Notification</string>
    <string name="setting_unit_title">Unit</string>
    <string name="setting_unit_feet">Feet</string>
    <string name="setting_unit_meters">Metres</string>
    <string name="setting">Setting</string>
    <string name="setting_version">Version: %1$s</string>
    <string name="setting_remove_title">Remove connected Fyndr</string>
    <string name="setting_remove_content">Are you sure you want to disconnect connection to Fyndr?</string>
    <string name="contact_us_phone">+86-15920041298</string>
    <string name="contact_us_email">service@zz-power.com</string>
    <string name="contact_us_website">www.zz-power.com</string>
    <string name="start_desc">Distance ±20 Metres</string>
    <string name="share_app_text">Where is your car？Fyndr app can really help you.</string>
    <string name="common_problem_1_title">1.   What should I do if the Fyndr charger is not pairing with the Fyndr app?</string>
    <string name="common_problem_1_content">Make sure that the Fyndr car charger is plugged into the car\'s 12V power socket and that your car engine is turned on before attempting to pair the Fyndr car charger with the Fyndr app. If this doesn\'t resolve the issue, please reboot restart your phone by turning it off completely and then turning it back on, then try to pair again.</string>
    <string name="common_problem_2_title">2.  Can I leave Fyndr charger in my car or do I need to take it with me for it to locate my parked car?</string>
    <string name="common_problem_2_content"> You can leave your Fyndr in your 12V power socket – you do not have to take it with you. When you have parked your car and have turned off your engine, Fyndr will automatically pin your location using the GPS on your phone. </string>
    <string name="common_problem_3_title">3.  What happens if Fyndr is directing me to my parked car location and it is not there?  </string>
    <string name="common_problem_4_title">4. What happens if I park my car and Fyndr cannot locate my location to pin?</string>
    <string name="common_problem_3_content">Fyndr will always take you to the location where your vehicle was last parked. If Fyndr is directing you to a location and your parked car is not located in this location, it may indicate your vehicle has been moved from this location. If your vehicle is not located where Fyndr has directed you, someone may have moved it.</string>
    <string name="common_problem_4_content">Fyndr will detect the location of your parked car with GPS access. If you are parked indoors or in an underground / multi-level cart park Fyndr may lose a direct line to GPS satellite. In this instance Fyndr will suggest you take an image of your surroundings using your smart phone camera to help find the location of your parked car later on.</string>
    <string name="setting_version_title">Version Code v</string>
    <string name="app_runing">Fyndr runing</string>
    <string name="alert_open_gps_title">GPS is not enabled.</string>
    <string name="alert_open_gps_setting_btn">Go to Set Up</string>
    <string name="upgrade_dialog_title">new version available</string>
    <string name="upgrade_dialog_info"> update log</string>
    <string name="upgrade_dialog_btn_sure">update</string>
    <string name="upgrade_dialog_btn_ignore">ignore</string>
    <string name="upgrade_dialog_btn_install">install</string>
    <string name="upgrade_dialog_gps_title">Use cellular data network to download new version？</string>
    <string name="upgrade_notify_download_start">start to download</string>
    <string name="upgrade_notify_download_ing">downloading...</string>
    <string name="upgrade_notify_download_ing_progress">downloading</string>
    <string name="upgrade_notify_download_done">Download complete, click to install</string>
    <string name="upgrade_notify_download_fail">fail to download new version</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCFBXZgWCvJfKI2GoD5WYFs6KgonivtkZY</string>
    <string name="compass_connected_title">Fyndr</string>
    <string name="setting_about">Über</string>
    <string name="useragreement_tac">AGB</string>
    <string name="useragreement_pp">Datenschutz</string>
    <string name="useragreement_imprint">Impressum</string>
    <string name="setting_use_desc">Instructions for use</string>
    <string name="setting_use_desc_close">Close</string>
    <string name="ble_connecting_str">Searching for Bluetooth Devices</string>
    <string name="sure_remove">remove</string>
    <string name="share_new_title">Select Sharing Platforms</string>
    <string name="share_to_message">Message</string>
    <string name="share_to_email">E-mail</string>
    <string name="share_to_whatsapp">Whatsapp</string>
    <string name="share_to_viber">viber</string>
    <string name="share_success">share_success</string>
</resources>