<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/common_hint_text"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@drawable/share_icon"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/share_title"
            android:textColor="#050505"
            android:textSize="@dimen/font_9"/>
    </LinearLayout>

    <include layout="@layout/view_line_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_item_message"
            style="@style/dialog_share_item_style"
            android:layout_marginLeft="@dimen/dp_17"
            android:drawableTop="@drawable/share_message_icon"
            android:text="@string/share_message"/>

        <TextView
            android:id="@+id/share_item_email"
            style="@style/dialog_share_item_style"
            android:drawableTop="@drawable/share_email_icon"
            android:text="@string/share_email"/>

        <TextView
            android:id="@+id/share_item_more"
            style="@style/dialog_share_item_style"
            android:drawableTop="@drawable/share_more_icon"
            android:text="@string/share_more"/>
    </LinearLayout>

    <include layout="@layout/view_line_layout"/>

    <TextView
        android:id="@+id/share_item_copy"
        style="@style/dialog_share_item_style"
        android:layout_margin="@dimen/dp_17"
        android:drawableTop="@drawable/share_copy_icon"
        android:text="@string/share_copy"/>

    <include layout="@layout/view_line_layout"/>

    <TextView
        android:id="@+id/share_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/share_cancel_btn_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"/>


</LinearLayout>