<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg"
              android:orientation="vertical">

    <include layout="@layout/view_line_layout"/>

    <TextView
        android:id="@+id/about_TAC"
        style="@style/setting_item_text_layout_style"
        android:drawableLeft="@drawable/setting_info_for_use"
        android:text="@string/useragreement_tac"
        android:visibility="visible"/>

    <include layout="@layout/view_line_padding10_layout"/>

    <TextView
        android:id="@+id/about_PP"
        style="@style/setting_item_text_layout_style"
        android:drawableLeft="@drawable/setting_info_for_use"
        android:text="@string/useragreement_pp"
        android:visibility="visible"/>

    <include layout="@layout/view_line_padding10_layout"/>

    <TextView
        android:id="@+id/about_Imprint"
        style="@style/setting_item_text_layout_style"
        android:drawableLeft="@drawable/setting_info_for_use"
        android:text="@string/useragreement_imprint"
        android:visibility="visible"/>

    <include layout="@layout/view_line_padding10_layout"/>

</LinearLayout>