<?xml version="1.0" encoding="utf-8"?>

<!--<FrameLayout-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_margin="@dimen/dp_10"-->
<!--android:background="@drawable/alert_time_dialog_bg"-->
<!--android:gravity="center"-->
<!--android:orientation="vertical">-->

<!--<ImageView-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:layout_margin="@dimen/dp_40"-->
<!--android:background="@color/transparent_70"/>-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_20"
    android:padding="@dimen/dp_50"
    android:background="@drawable/alert_time_dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"

        android:text="@string/setting_park_time_title"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"/>


    <LinearLayout
        android:id="@+id/time_layout_1"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rb_30minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/parking_time_selected_button"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting_park_time_30m"
            android:textColor="@color/alert_time_item_text"/>

        <TextView
            android:id="@+id/rb_45minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/parking_time_selected_button"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting_park_time_45m"
            android:textColor="@color/alert_time_item_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rb_1hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/parking_time_selected_button"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting_park_time_1h"
            android:textColor="@color/alert_time_item_text"/>

        <TextView
            android:id="@+id/rb_2hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/parking_time_selected_button"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting_park_time_2h"
            android:textColor="@color/alert_time_item_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout_3"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rb_3hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/parking_time_selected_button"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting_park_time_3h"
            android:textColor="@color/alert_time_item_text"/>

        <TextView
            android:id="@+id/rb_4hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/parking_time_selected_button"
            android:drawablePadding="@dimen/dp_5"
            android:text="@string/setting_park_time_4h"
            android:textColor="@color/alert_time_item_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/more_btn"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/setting_park_time_more"
        android:textColor="@color/common_normal_text"/>


    <com.vanpro.zitech125.ui.widget.TimeAlertPricker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:layout_marginBottom="@dimen/dp_10"
        android:visibility="gone">
    </com.vanpro.zitech125.ui.widget.TimeAlertPricker>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/setting_park_time_close"
            android:textColor="@color/common_black_color"
            android:textSize="@dimen/font_16" />

        <TextView
            android:layout_width="2px"
            android:layout_height="@dimen/dp_30"
            android:gravity="center"/>

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/setting_park_time_save"
            android:background="@color/common_orgin_color"
            android:textColor="@color/common_black_color"
            android:textSize="@dimen/font_16"/>
    </LinearLayout>

</LinearLayout>

    <!--</FrameLayout>-->